# cybercentry

./: .gitignore  .pyre_configuration  AGENTS.md  FULL_BUILD_PLAN.md  PRODUCT_IDEA.md  README.md  SLIDES.md  pyproject.toml  pyrightconfig.json  requirement.txt
.cybersentry/: config.toml
chrome_extension/: README.md  manifest.json  panel.css  panel.html  panel.js  popup.css  popup.html  popup.js  service_worker.js
cyber_sentry/: .env.example  .pyre_configuration  CLI_DEMO_SCRIPT.md  CYBERSENTRY_MANUAL.md  FULL_BUILD_PLAN.md  pyrightconfig.json
cyber_sentry/.cybersentry/: config.toml
cyber_sentry/.cybersentry/policies/: default_policy.toml
cyber_sentry/src/cyber_sentry_cli/: __init__.py
cyber_sentry/tests/: test_models.py  vulnerable_chat_cli_test.py  vulnerable_cli_fresh_test.py  vulnerable_sample.py
src/cyber_sentry_cli/: main.py
src/cyber_sentry_cli/api/: app.py
src/cyber_sentry_cli/commands/: chat.py  debate.py  doctor.py  patch.py  report.py  scan.py  trace.py  triage.py
src/cyber_sentry_cli/core/: __init__.py  config.py  events.py  orchestrator.py
src/cyber_sentry_cli/integrations/: __init__.py  openrouter.py
src/cyber_sentry_cli/output/: dashboard.py  json_export.py  sarif_export.py  terminal.py
src/cyber_sentry_cli/reasoning/: __init__.py  debate_engine.py  judge.py  prompts.py
src/cyber_sentry_cli/remediation/: approval.py  generator.py
src/cyber_sentry_cli/scanners/: bandit.py  base.py  semgrep.py
tests/: test_core.py  vulnerable_chat_cli_test.py  vulnerable_full_security_test.py  vulnerable_sample.py
(+26 files in other folders)
